syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/v4/x/gitopia/types";

import "gogoproto/gogo.proto";
import "gitopia/attachment.proto";

message Release {
  string creator = 1;
  uint64 id = 2;
  uint64 repositoryId = 3; 
  string tagName = 4; 
  string target = 5; 
  string name = 6; 
  string description = 7; 
  repeated Attachment attachments = 8; 
  bool draft = 9; 
  bool preRelease = 10; 
  bool isTag = 11; 
  int64 createdAt = 12; 
  int64 updatedAt = 13; 
  int64 publishedAt = 14; 
}